# mocSY-formal-proof

./: README.md  mocSY-formal-proof.cabal  stack.yaml
app/: Main.hs  RunDiscovery.hs
src/Discovery/: Signatures.hs
src/Models/: PIDController.hs  System.hs
src/Verification/: Properties.hs  Refinements.hs
test/: Spec.hs
