cabal-version: 3.0

name:           mocSY-formal-proof
version:        0.1.0.0
description:    Dissertation project
author:         Diego Rocha
maintainer:     diegodmr@ita.br
build-type:     Simple

common common-options
  default-language: GHC2024
  ghc-options:
    -Wall
    -fplugin=LiquidHaskell
    -fplugin-opt=LiquidHaskell:--no-termination 

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
      Models.PIDController
      Verification.Properties
      Verification.Refinements
      Discovery.Signatures
  build-depends:
      base
    , liquidhaskell
    , quickspec
    , forsyde-shallow           >= 3.5
    , QuickCheck                >= 2.14

executable system-simulation
  import: common-options
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , mocSY-formal-proof
    , liquidhaskell
    , forsyde-shallow

executable properties-discovery
  import: common-options
  main-is: RunDiscovery.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , mocSY-formal-proof
    , liquidhaskell
    , quickspec

test-suite properties-validation
  import: common-options
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , mocSY-formal-proof
    , liquidhaskell
    , QuickCheck
